--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <title>Password Generator</title>
 </head>
 <body>
+
+    <h1 id="password"></h1>
+
     <script src="myscript.js"></script>
 </body>
 </html>
