--- a/index.html
+++ b/index.html
@@ -7,8 +7,13 @@
     <title>Password Generator</title>
 </head>
 <body>
+    <!--Parte aggiuntiva per inserire specifica su dati inseriti-->
+    <h1>Nome:<h3 id="nome"></h1></h1>
+    <h1>Cognome:<h3 id="cognome"></h1></p>
+    <h1>Colore preferito:<h3 id="colore-preferito"></h1></p>
 
-    <h1 id="password"></h1>
+    <!--Esercizio richiesto-->
+    <h1>Password:<h3 id="password"></h3></h1>
 
     <script src="myscript.js"></script>
 </body>
