--- a/bonus/index.html
+++ b/bonus/index.html
@@ -11,13 +11,13 @@
 </head>
 <body>
 
-    <p>Che giorno è oggi? <span id="data-corrente"></span></p>
+    <!--<p>Che giorno è oggi? <span id="data-corrente"></span></p>-->
 
-    <p>Quando compio gli anni? <span id="mio-compleanno"></span></p>
+    <!--<p>Quando compio gli anni? <span id="mio-compleanno"></span></p>-->
 
     <!--<p>Quanti giorni di differenza ci sono? <span id="differenza-giorni"></span></p>-->
     
-    <button onclick="calcolatoreCompleanno()"type="button" class="btn btn-primary">Quanti giorni mancano al mio compleanno?</button>
+    <button onclick="calcolatoreCompleanno()"type="button" class="btn btn-primary position-absolute top-50 start-50 translate-middle">Quanti giorni mancano al mio compleanno?</button>
 
 
 
